# sparse-kappa

./: README.md  pyproject.toml  setup.py
.github/workflows/: test.yml
docs/source/: conf.py  examples.rst
docs/source/api/: gnn.rst
sparse_kappa/: __init__.py
sparse_kappa/gnn/: __init__.py  training.py
tests/: test_gnn.py
